--- a/papers/lambda2023/02intro.tex
+++ b/papers/lambda2023/02intro.tex
@@ -35,24 +35,40 @@
 \begin{frame}{Для формализации алгоритмов}
 $\lambda$-исчисление можно использовать как формализацию понятия \enquote{алгоритм}
 
-\begin{definition}[Алгоритм (неформально)]
-Это конечная последовательность действий (или операций), к которым относятся все компьютерные программы, бюрократические процедуры, кулинарные рецепты и т.п.
+\begin{definition}[Алгоритм (неформально, по А.~Н.~Колмогорову)]
+Алгоритм --- это всякая система вычислений, выполняемых по строго определенным правилам, которая после какого-либо числа шагов заведомо приводит к решению поставленной задачи.
 \end{definition}
+\vspace{2em}
 
 Алгоритмы, которые иногда дают ответ, а иногда не завершаются, называются \textit{разрешающими процедурами}.
 \end{frame}
 
 \begin{frame}{Проблемы неформального определения}
-Зависимо от естественного языка\\
 
+\begin{figure}[ht]
+  \begin{subfigure}[t]{.55\textwidth}
+     \vspace{-13em}
+     Зависимо от естественного языка\\
 
-\vspace{1em}
-Не совсем понятно, что является допустимой операцией, а что нет.
-\begin{itemize}
-    \item \enquote{Возьмите два любых решения уравнения $a^n+b^n=c^n$, для $n>2$ и $a,b,c\in \mathcal{N}$...}
-	\item \enquote{Если это утверждение ложно, то ...}
-	\item \enquote{Объявим как $A$ множество всех множеств. Если $A\in A$, то делаем одно, иначе --- другое}
-\end{itemize}
+     \vspace{1em}
+     Не совсем понятно, что является допустимой операцией, а что нет.
+     \begin{itemize}
+         \item \enquote{Возьмите два любых решения уравнения $a^n+b^n=c^n$, для $n>2$ и $a,b,c\in \mathcal{N}$...}
+     	\item \enquote{Если это утверждение ложно, то ...}
+     	\item \enquote{Объявим как $A$ множество всех множеств. Если $A\in A$, то делаем одно, иначе --- другое}
+     \end{itemize}
+\footnotetext{Изображение из \href{https://en.wikipedia.org/wiki/Pierre\_de\_Fermat}{Википедии}}
+
+  \end{subfigure}
+\hspace{1cm}
+  \begin{subfigure}[t]{.35\textwidth}
+    \includegraphics[width=.95\textwidth]{Pierre_de_Fermat3.jpeg}\\
+    \centering
+    %Pierre de Fermat \\(1601--1665)
+    Quel est mon nom? \\(1601--1665)
+  \end{subfigure}
+\end{figure}
+
 \end{frame}
 
 
@@ -92,7 +108,8 @@ $\lambda$-исчисление можно использовать как фор
 Существуют много различных формализаций:
 \begin{itemize}
 \item $\lambda$-исчисление
-\item Машины Тьюринга\footnote{Мало имеют общего с компьютерами. Считать А.Тьюринга изобретателем компьютеров~--- неправильно}
+\item Машины Тьюринга\footnote{Мало имеют общего с компьютерами. %Считать А.Тьюринга изобретателем компьютеров~--- неправильно
+}
 \item Машины Поста
 \item Частично (объявленные) рекурсивные функции (англ. partial recursive function)
 \item Алгорифмы Маркова
@@ -125,8 +142,9 @@ $\lambda$-исчисление можно использовать как фор
 
 
 \begin{frame}{$\lambda$-исчисление}
+\framesubtitle{(А. Чёрч, в таком виде --- 1935)}
 \begin{figure}[t]
-  \begin{subfigure}[t]{0.35\textwidth}
+  \begin{subfigure}[t]{0.5\textwidth}
     \vspace{-5em}
     \vspace{-1em}
     Синтаксис:
@@ -143,7 +161,7 @@ $\lambda$-исчисление можно использовать как фор
 %    \end{definition}
   \end{subfigure}
 \hspace{1cm}
-  \begin{subfigure}[t]{0.55\textwidth}
+  \begin{subfigure}[t]{0.4 \textwidth}
 
       \vspace{-5.5em}
 В терминах программирования:
@@ -158,12 +176,12 @@ $\lambda$-исчисление можно использовать как фор
 \end{figure}
 \end{frame}
 
-\begin{frame}{Каррирование}
+\begin{frame}{Каррирование/Шейнфинкелизация}
 \begin{figure}[t]
   \begin{subfigure}[t]{0.4 \textwidth}
         \vspace{-10em}
-\begin{definition}[Каррирование]
-представление n-арных функций через 1-арные функции
+\begin{definition}%[Каррирование]
+Представление n-арных функций через 1-арные функции
 \end{definition}
 
 \vspace{1em}
@@ -198,23 +216,34 @@ $\lambda$-исчисление можно использовать как фор
 \begin{frame}[fragile]{Символ $\lambda$ работает как квантор}
   \tikzstyle{every picture}+=[remember picture]
   \tikzstyle{na} = [shape=rectangle,inner sep=0pt,text depth=0pt]
-%  {\Large
-%  \[
-%  \lambda \tikz\node[na](dbI1){x}; . (\lambda \tikz\node[na](dbI2){z};.  \tikz\node[na](dbI3){x}; \tikz\node[na](dbI4){z};)  \tikz\node[na](dbI5){x};
-%  \]
-%  \begin{tikzpicture}[overlay]
-%    \path[->,red,thick](dbI1) edge [out=90, in=90] (dbI3);
-%    \path[->,red,thick](dbI1) edge [out=-90, in=-90] (dbI5);
-%    \path[draw,->,blue,thick] (dbI2.south) -- ++(0,-0.2cm) -- ++(0.6cm,0) -- (dbI4.south);
-%  \end{tikzpicture}
-%}
-  {\Large
+{\Large
+\[
+\{\textcolor{red}{x}\mid P(x)\} \qquad
+\forall \textcolor{red}{x}\ P(x)  \qquad
+\bigcup_{\textcolor{red}{n}}\ A(n)  \qquad
+lim_{\textcolor{red}{n}\rightarrow\infty}\ u_n
+\]
+}
+\vspace{1em}
+
+\begin{figure}[ht]
+  \begin{subfigure}[t]{.45\textwidth}
+    \uncover<2->{\large
+    \begin{align*}
+    \forall x\ P(x)\ & \equiv & \forall \lam{x}{P(x)} &\\
+    \sum_{n=0}^{\infty}  \frac{1}{n^2} & \equiv & sum(0,\infty,\lam{n}{\frac{1}{n^2}})&\\
+    \int_{a}^{b} f(x)\ dx& \equiv & integr(a,b,\lam{x}{f(x)})&
+    \end{align*}}
+  \end{subfigure}
+\hspace{1cm}
+  \begin{subfigure}[t]{.45\textwidth}
+  \uncover<3->{\Large
   \[
-  \lambda \tikz\node[na](dbM){m};.
-  \lambda \tikz\node[na](dbN){n};.
-  \lambda \tikz\node[na](dbF){f};.
-  \lambda \tikz\node[na](dbX){x};.
-  \app{\tikz\node[na](UM){m};\ \tikz\node[na](UF1){f};\ }{\app{\tikz\node[na](UN){n};\  \tikz\node[na](UF2){f};\ }{\tikz\node[na](UX){x};}}
+  \abs{\tikz\node[na](dbM){m};}{
+  \abs{ \tikz\node[na](dbN){n};}{
+  \abs{ \tikz\node[na](dbF){f};}{
+  \abs{ \tikz\node[na](dbX){x};}{
+  \app{\tikz\node[na](UM){m};\ \tikz\node[na](UF1){f};\ }{\app{\tikz\node[na](UN){n};\  \tikz\node[na](UF2){f};\ }{\tikz\node[na](UX){x};}}}}}}
   \]
   \begin{tikzpicture}[overlay]
     \path[->, red,thick](dbM) edge [out=90, in=90] (UM);
@@ -222,15 +251,13 @@ $\lambda$-исчисление можно использовать как фор
     \path[->, red,thick](dbF) edge [out=-90, in=-90] (UF1);
     \path[->, red,thick](dbF) edge [out=-90, in=-90] (UF2);
     \path[->, red,thick](dbX) edge [out=90, in=90] (UX);
-%    \path[draw,->,blue,thick] (dbF.south) -- ++(0,-0.2cm) -- ++(0.6cm,0) -- (dbI4.south);
   \end{tikzpicture}
-}
-\begin{itemize}
-  \item свободные вхождения
-  \item связанные вхождения и т.д.
-\end{itemize}
-
-\footnotetext{TODO: сказать про скобочки}
+  \begin{itemize}
+    \item свободные вхождения
+    \item связанные вхождения и т.д.
+  \end{itemize}}
+  \end{subfigure}
+\end{figure}
 \end{frame}
 
 
@@ -278,7 +305,7 @@ $\lambda$-исчисление можно использовать как фор
     \end{tikzpicture}
   }
    \end{minipage}
-   \begin{definition}[Один шаг ($\beta$-)редукции]
+   \begin{definition}[Один шаг $\beta$-редукции]
    это избавление от редекса  $(\lambda x. B)A$ путём совершения подстановки $A$ вместо $x$ в выражении $B$
    \end{definition}
    \end{subfigure}
@@ -317,14 +344,16 @@ $\lambda$-исчисление можно использовать как фор
 \end{comment}
 
 \begin{frame}{Что нужно для представления алгоритмов?}
-  \begin{itemize}
-    \item Принимать входные данные
-    \item Делать ветвления  в зависимости от входных данных
-    \item Совершать некоторое количество однотипных действий в зависимости от входных данных (т.е. должны быть циклы или их аналог --- рекурсия)
+
+     Принимать \emph{входные данные}\vspace{1em}
+
+    \emph{Делать ветвления}  в зависимости от входных данных\vspace{1em}
+
+    Совершать некоторое количество однотипных действий в зависимости от входных данных (т.е. должны быть \emph{циклы} или их аналог --- \emph{рекурсия})
     \begin{itemize}
-\item       Чтобы понимать, сколько действий уже сделали нужны натуральные числа
+\item  Натуральные числа нужны, чтобы понимать, сколько действий уже сделали
     \end{itemize}
-  \end{itemize}
+  %\end{itemize}
 \end{frame}
 
 \begin{frame}{Историческое напоминание: числа Пеано}
@@ -358,6 +387,7 @@ $\lambda$-исчисление можно использовать как фор
 \defverbatim[colored]{\numeralIsFor}{
 \begin{lstlisting}[language=c]
 // Church numeral N
+// a.k.a. primitive recursive function
 for (int i=0; i<N; i++)
   x = f(x);
 \end{lstlisting}
@@ -365,7 +395,7 @@ for (int i=0; i<N; i++)
 
 \begin{frame}{Представление чисел (нумералы Чёрча). Сложение}
 \begin{figure}[t]
-    \begin{subfigure}[t]{0.45\textwidth}
+    \begin{subfigure}[t]{0.35\textwidth}
 $ 0 \sim \lam{f}{\lam{x}{\ x}}$
 
 $ 1 \sim \lam{f}{\lam{x}{\ f\ x}}$
@@ -374,21 +404,21 @@ $ 2 \sim \lam{f}{\lam{x}{\ f\ (f\ x)}}$
 
   и т.д.
     \end{subfigure}
-    \begin{subfigure}[t]{0.45\textwidth}
+    \begin{subfigure}[t]{0.55\textwidth}
     \begin{minipage}{\textwidth}
     \numeralIsFor
     \end{minipage}
     \end{subfigure}
 \end{figure}
 
-  \vspace{1cm}
+  \vspace{2em}
 
   Сложение (один из вариантов): взять два нумерала $m$ и $n$, взять $f$ и $x$, а затем к $x$ применить $f$ $n$ раз, а затем к результату применить $f$ $m$ раз.
 
-\begin{align*}
+{\Large \begin{align*}
 add \equiv &\ \lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{m\ f\ }{\app{n\ f\ }{x}}}}}}\\
-\equiv &\ \lambda m. \lambda n. \lambda f. \lambda x. \app{m\ f\ }{\app{n\ f\ }{x}}
-\end{align*}
+%\equiv &\ \lambda m. \lambda n. \lambda f. \lambda x. \app{m\ f\ }{\app{n\ f\ }{x}}
+\end{align*}}
 \end{frame}
 
 
@@ -396,23 +426,24 @@ add \equiv &\ \lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{m\ f\ }{\app{n\ f\ }{x}}}}}}\
 \def\betaarr{\longrightarrow\!\!\beta}
 \def\numTWO{\ensuremath{\lam{f}{\lam{x}{f(f\ x)}}}}
 \vspace{-2em}
+{\Large
   \begin{align}
-    \App{\lambda m. \lambda n. \lambda f. \lambda x. \app{m\ f\ }{\app{n\ f\ }{x}} }{2} 2 & \betaarr \\
-    \Redex{(\lambda m. \lambda n. \lambda f. \lambda x. \app{m\ f\ }{\app{n\ f\ }{x}}) {}}{2} 2 & \betaarr \\
-    \Redex{( \lambda n. \lambda f. \lambda x. \app{2\ f\ }{\app{n\ f\ }{x}}){}}{2} & \betaarr \\
-    \lambda f. \lambda x. \app{2\ f\ }{\app{2\ f\ }{x}}   & \longrightarrow \\
-    \lambda f. \lambda x. \App{\Redex{\numTWO}{f}\ }{\app{2\ f\ }{x}} & \betaarr \\
-    \lambda f. \lambda x. \App{\lam{x}{f (f x)} \ \ }{\app{2\ f\ }{x}} & \longrightarrow \\
-    \lambda f. \lambda x. \app{\lam{x}{f (f x)}} {\app{\App{\Redex{\numTWO}{f}}{x}}} & \betaarr \\
-    \lambda f. \lambda x. \App{\lam{x}{f (f x)}  } {\Redex{\lam{x}{f (f x)} }{x}} & \betaarr \\
-    \lambda f. \lambda x. \redex{\Lam{x}{f (f x)}}{\App{f}{\app{f}{x}}} & \betaarr \\
-    \lambda f. \lambda x. f (f (f (f x))) & \equiv 4
-  \end{align}
+    \App{\lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{m\ f\ }{\app{n\ f\ }{x}} }}}}}{2} 2 & \longrightarrow \\
+    \Redex{\lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{m\ f\ }{\app{n\ f\ }{x}} }}}}}{2} 2 & \betaarr \\
+    \redex{\lam{n}{\lam{f}{\lam{x}{\app{2\ f\ }{\app{n\ f\ }{x}}){}}}}} {2} & \betaarr \\
+    \lam{f}{\lam{x}{ \app{2\ f\ }{\app{2\ f\ }{x}}}}   & \longrightarrow \\
+    \lam{f}{\lam{x}{ \App{\Redex{\numTWO}{f}\ }{\app{2\ f\ }{x}}}} & \betaarr \\
+    \lam{f}{\lam{x}{ \App{\lam{x}{f (f x)} \ \ }{\app{2\ f\ }{x}}}} & \longrightarrow \\
+    \lam{f}{\lam{x}{ \app{\lam{x}{f (f x)}} {\app{\App{\Redex{\numTWO}{f}}{x}}}}} & \betaarr \\
+    \lam{f}{\lam{x}{ \App{\lam{x}{f (f x)}  } {\Redex{\lam{x}{f (f x)} }{x}}}} & \betaarr \\
+    \lam{f}{\lam{x}{ \redex{\Lam{x}{f (f x)}}{\App{f}{\app{f}{x}}}}} & \betaarr \\
+    \lam{f}{\lam{x}{ f (f (f (f x)))}} & \equiv 4
+  \end{align}}
 \end{frame}
 
 \begin{frame}{Представление чисел (нумералы Чёрча). Умножение}
 \begin{figure}[t]
-    \begin{subfigure}[t]{0.45\textwidth}
+    \begin{subfigure}[t]{0.35\textwidth}
 $ 0 \sim \lam{f}{\lam{x}{\ x}}$
 
 $ 1 \sim \lam{f}{\lam{x}{\ f\ x}}$
@@ -421,7 +452,7 @@ $ 2 \sim \lam{f}{\lam{x}{\ f\ (f\ x)}}$
 
   и т.д.
     \end{subfigure}
-    \begin{subfigure}[t]{0.45\textwidth}
+    \begin{subfigure}[t]{0.55\textwidth}
     \begin{minipage}{\textwidth}
     \numeralIsFor
     \end{minipage}
@@ -433,11 +464,11 @@ $ 2 \sim \lam{f}{\lam{x}{\ f\ (f\ x)}}$
 
 Умножение: взять два нумерала $m$ и $n$, взять $f$ и $x$, а затем к $x$ применить $n$ раз $f$, и повторить это $m$ раз.
 
-\begin{align*}
+{\Large \begin{align*}
 mul \equiv &\ \lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{\app{m}{\app{n\ f}}{\ x}}}}}}\\
-\equiv &\ \lambda m. \lambda n. \lambda f. \lambda x. \app{\app{m}{\app{n\ f}}}{\ x} \\
+%\equiv &\ \lambda m. \lambda n. \lambda f. \lambda x. \app{\app{m}{\app{n\ f}}}{\ x} \\
 %\simeq &\ \lambda m. \lambda n. \lambda f. \app{m}{\app{n\ f}} \\
-\end{align*}
+\end{align*}}
 \end{frame}
 
 
@@ -472,7 +503,8 @@ mul \equiv &\ \lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{\app{m}{\app{n\ f}}{\ x}}}}}}
   \end{subfigure}
   \begin{subfigure}[t]{0.55\textwidth}
         \vspace{-8em}
-        \begin{align}
+
+        {  \begin{align}
           \apppl{\app{\lam{m}{\lam{n}{\lam{z}{\lam{x}{(m \app{n}{z} x)}}}}}{2}}{2} & \longrightarrow \\
           \Apppl{\Redex{\lam{m}{\lam{n}{\lam{z}{\lam{x}{(m \app{n}{z} x)}}}}}{2}}{2} & \betaarr \\
           \Redex{\lam{n}{\lam{z}{\lam{x}{(2 \app{n}{z} x)}}}}{2} & \betaarr \\
@@ -486,7 +518,7 @@ mul \equiv &\ \lam{m}{\lam{n}{\lam{f}{\lam{x}{\app{\app{m}{\app{n\ f}}{\ x}}}}}}
           \lam{z}{\lam{x}{\app{z}{\app{z}{\App{\Redex{\numTWO}{z}}{x}}}}} & \betaarr \\
           \lam{z}{\lam{x}{\app{z}{\App{z}{\Redex{\lam{x}{\app{z}{\app{z}{x}}}}{x}}}}} & \betaarr \\
           \lam{z}{\lam{x}{\app{z}{\app{z}{\app{z}{\app{z}{x}}}}}} & \equiv 4
-        \end{align}
+        \end{align}}
   \end{subfigure}
 \end{figure}
 
@@ -587,8 +619,8 @@ F\equiv \lam{x}{\lam{y}{y}}\equiv snd \equiv 0
 
 \begin{align*}
   ite \quad\equiv &\quad \lam{c}{\lam{t}{\lam{e}{\ \app{\app{c}{t}}{e}}}}\\
-  (ite\ T) \quad\equiv &\quad \ite T \arrbeta \lambda t. \lambda e. (\app{T}{t}\ e) \arrmany \lam{t}{\lam{e}{t}}\equiv T\\
-  (ite\ F) \quad\equiv &\quad \ite F \arrbeta \lambda t. \lambda e. (\app{F}{t}\ e) \arrmany \lam{t}{\lam{e}{e}}\equiv F
+  (ite\ T) \quad\equiv &\quad \ite T \arrbeta \lam{t}{\lam{e}{ (\app{T}{t}\ e)}} \arrmany \lam{t}{\lam{e}{t}}\equiv T\\
+  (ite\ F) \quad\equiv &\quad \ite F \arrbeta \lam{t}{\lam{e}{ (\app{F}{t}\ e)}} \arrmany \lam{t}{\lam{e}{e}}\equiv F
 \end{align*}
 
 %\footnotetext{
@@ -635,31 +667,31 @@ F\equiv \lam{x}{\lam{y}{y}}\equiv snd \equiv 0
 \newcommand\Y{\ensuremath{Y}}
 \begin{frame}{Рекурсия через комбинатор неподвижной точки}
 \framesubtitle{англ. FIXed point combinator}
-\def\Yimpl{\ensuremath{\lam{f}{\lam{x}{f(x\ x)}\lam{x}{f(x\ x)}}}}
+\def\Yimpl{\ensuremath{\lam{f}{\Lam{x}{f(x\ x)}\Lam{x}{f(x\ x)}}}}
 Не понятно как вызвать самого себя, так как имен нет.\\
 
 Идея:
 \begin{itemize}
   \item Записываем функцию $f$ так, чтобы она принимала первый аргумент, который будет вызываться вместо рекурсивного вызова
   \item Везде, где надо вызвать эту \enquote{рекурсивную} функцию, будем писать $Yf$
-
-  \begin{align*}
+\vspace{-0.5em}
+  {\Large\begin{align*}
      Y\equiv \Yimpl
-  \end{align*}
+  \end{align*}}
 \end{itemize}
 
 Откуда такое название?
 \begin{align*}
 YR &\equiv     \redex{\Yimpl}{R} \arrbeta \redex{\lam{x}{R(x\ x)}}{\lam{x}{R(x\ x)}} \\
-&\arrbeta  R\big( \lam{x}{R(x\ x)}\lam{x}{R(x\ x)} \big)  \equiv R(YR)
+&\arrbeta  R\big( \lam{x}{R(x\ x)}\lam{x}{R(x\ x)} \big)   \overset{\beta}{\equiv} R(YR)
 \end{align*}
 Получается, что $YR$ --- неподвижная точка $R$
 \end{frame}
 
 
-\newcommand{\ite}[3]{\ensuremath{(\text{\textbf{if }} #1\text{\textbf{ then }}#2\text{\textbf{ else }}#3})}
+\newcommand{\ite}[3]{\ensuremath{\big{(}\text{\textbf{if }} #1\text{\textbf{ then }}#2\text{\textbf{ else }}#3}\big{)}}
 \newcommand{\FIX}{\texttt{FIX}}
-\newcommand{\self}{\ensuremath{sel\!f}}
+\newcommand{\self}{\ensuremath{self}}
 
 \begin{frame}{Факториал с помощью $Y$-комбинатора (сокращённо)}
 \def\Yfac{\ensuremath{\app{\Y}{f\!ac}}}
@@ -668,7 +700,7 @@ YR &\equiv     \redex{\Yimpl}{R} \arrbeta \redex{\lam{x}{R(x\ x)}}{\lam{x}{R(x\ 
 \newcommand{\FAC}{\ensuremath{\lam{\self}{\lam{n}{ \ite{n<2}{1}{n \times \self(n-1)}}}}}
 %Основное свойство
 \[
-\Y\ R = R\ (\Y\ R)
+\Y R = R (\Y R)
 \]
 
 %\vspace{1em}
@@ -688,38 +720,3 @@ YR &\equiv     \redex{\Yimpl}{R} \arrbeta \redex{\lam{x}{R(x\ x)}}{\lam{x}{R(x\ 
  \end{frame}
 
 
-
-
-%\section{Введение и историческая справка}
-%\input{00hist}
-
-%\section{Вопросы к экзамену}
-%\begin{frame}{Вопросы к экзамену}
-%\begin{itemize}
-%  \item Разрешимые и неразрешимые задачи
-%  \item $\lambda$-исчисление. $\alpha$ и $\beta$ правила
-%  \item Нумералы Чёрча. Сложение
-%  \item Рекурсия и факториал на ``пальцах''
-%  \item Наследование, но оно будет ещё в других билетах
-%\end{itemize}
-%\end{frame}
-
-%\section{Как писать интерпретатор на Си?}
-%\begin{frame}{Дэмка на С++ (1/5): представление выражений}
-%\cast
-%\end{frame}
-%
-%\begin{frame}{Дэмка на С++ (2/5): объявление стратегии}
-%\strat
-%\end{frame}
-%
-%\begin{frame}{Дэмка на С++ (3/5): тривиальная константная стратегия}
-%\nostrat
-%\end{frame}
-%
-%\begin{frame}{Дэмка на С++ (4/5): Call-by-value}
-%\cbvstrat
-%\end{frame}
-%\begin{frame}{Дэмка на С++ (5/5): понятие наследования}
-%\inheritance
-%\end{frame}
