--- a/papers/lambda2023/preamble.tex
+++ b/papers/lambda2023/preamble.tex
@@ -1,5 +1,9 @@
 \makeatletter
 \@ifclassloaded{beamer}{
+  \usefonttheme{professionalfonts}
+  \usepackage[svgnames]{xcolor}
+  \usetheme{CambridgeUS}
+  \setbeamertemplate{enumerate items}[circle]
   % get rid of header navigation bar
   \setbeamertemplate{headline}{}
   % get rid of bottom navigation symbols
@@ -7,7 +11,20 @@
   % get rid of footer
   %\setbeamertemplate{footline}{}
   \setbeamertemplate{section in toc} {\inserttocsectionnumber.~\inserttocsection}
-  \usefonttheme{professionalfonts}
+  %\institute{матмех}
+  \institute{}
+
+  \titlegraphic{
+        \hspace{5cm}
+        {\tiny Дата сборки: \today}
+        \hspace{1.8cm}
+    \includegraphics{by-sa.png}
+  }
+%  \addtobeamertemplate{title page}{}{
+%    \begin{center}
+%        {\tiny Дата сборки: \today}
+%    \end{center}
+%  }
 }
 {}
 \makeatother
@@ -24,16 +41,32 @@
         \fi
     \fi
 
+
+\author{Косарев Дмитрий}
+
 \ifxetexorluatex
     \usepackage{fontspec}
-    \usepackage{unicode-math}
-    \setmainfont[Ligatures=TeX]{CMU Serif}
-    \setsansfont[Ligatures=TeX]{CMU Sans Serif}
-    \setmathfont[Scale=MatchUppercase]{Asana Math}
-    \setmonofont{Monaco for Powerline}[Scale=0.9]
-
-%\newfontfamily{\myfiracode}[Scale=1.5,Contextuals=Alternate]{Fira Code}
-%\setmonofont[Scale=0.9,BoldFont={Inconsolata Bold}]{Inconsolata}
+%    \usepackage{unicode-math} % Allow TTF and OTF fonts in math and allow direct typing unicode math characters.
+    \usepackage{euler-math}
+    %\setmainfont[Ligatures=TeX]{CMU Serif}
+    %\setsansfont[Ligatures=TeX]{CMU Sans Serif}
+    \setmainfont[Ligatures=TeX]{Liberation Serif}
+    \setsansfont[Ligatures=TeX]{Liberation Sans}
+%    \setmathfont{Latin Modern Math}
+%    \setmathfont{NotoSansMath-Regular.ttf}
+%    \setmathfont{FiraMath-Regular.otf} % from texlive-fonts-extra
+%    \setmathfont{TeX Gyre Pagella Math} % Doesn't have \setminus
+%    \setmathfont[Scale=MatchUppercase]{Asana Math}
+%    \setmainfont{TeX Gyre Bonum}
+%    \setmathfont{TeX Gyre Bonum Math}
+%\setmonofont{Fira Code}[Contextuals=AlternateOff,Ligatures=Common]
+%\setmonofont{Fira Code}[Contextuals=Alternate,Scale=0.9]
+    %\setmonofont{Monaco for Powerline}[Scale=0.9]
+    %\setmonofont{Cascadia Mono}[Scale=0.9]
+    %\usepackage{cascadia-code}
+    %\setmonofont{Cascadia Mono}
+    \setmonofont{Fira Code}
+    %\setmonofont{Latin Modern Mono}[Scale=1]
 
     \usepackage{polyglossia}
     \setmainlanguage{russian}
@@ -42,17 +75,12 @@
     \usepackage[utf8]{inputenc}
     \usepackage[T2A]{fontenc}
     \usepackage[russian,english]{babel}
+    \usepackage{euler}
+    %\usepackage{cascadia-code}
+    %\usepackage{lmodern}
 \fi
-%\newfontfamily{\cyrillicfonttt}{Monaco for Powerline}
-%  [ Contextuals=Alternate
-%  , Scale=0.8
-%  , BoldFont=MonacoB
-%  ]
 
-%\newfontfamily\dejaVuSansMono{DejaVu Sans Mono}
-% https://github.com/vjpr/monaco-bold/raw/master/MonacoB/MonacoB.otf
-%\newfontfamily\monacoB{MonacoB}
-
+\usepackage[nobiblatex]{xurl} % for line breaks in URLs
 \usepackage{fontawesome}
 % \newfontfamily{\FA}{Font Awesome 5 Free} % some glyphs missing
 \expandafter\def\csname faicon@facebook\endcsname{{\FA\symbol{"F09A}}}
@@ -70,19 +98,74 @@
 \newcommand{\faWrong}{\textcolor{red}{\faTimes}}
 \newcommand{\faMaybe}{\textcolor{blue}{\faQuestion}}
 \newcommand{\faCheckGreen}{\textcolor{ForestGreen}{\faCheck}}
+
+\ifxetexorluatex
+\else
+\renewcommand{\faCheck}{\ensuremath{\circ}}
+\renewcommand{\faCheckEmpty}{\ensuremath{\circ}}
+\fi
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% https://latex.org/forum/viewtopic.php?t=34345
+\usepackage[backend=bibtex,style=numeric,sorting=none]{biblatex}
 
+\makeatletter
+\@ifclassloaded{beamer}{
+    %% Set the icons
+    \setbeamertemplate{bibliography item}{%
+    \ifboolexpr{ test {\ifentrytype{book}} or test {\ifentrytype{mvbook}}
+      or test {\ifentrytype{collection}} or test {\ifentrytype{mvcollection}}
+      or test {\ifentrytype{reference}} or test {\ifentrytype{mvreference}} }
+      {\setbeamertemplate{bibliography item}[book]}
+      {\ifentrytype{online}
+        {\setbeamertemplate{bibliography item}[online]}
+        {\setbeamertemplate{bibliography item}[article]}}%
+    \usebeamertemplate{bibliography item}}
 
+    \defbibenvironment{bibliography}
+    {\list{}
+       {\settowidth{\labelwidth}{\usebeamertemplate{bibliography item}}%
+        \setlength{\leftmargin}{\labelwidth}%
+        \setlength{\labelsep}{\biblabelsep}%
+        \addtolength{\leftmargin}{\labelsep}%
+        \setlength{\itemsep}{\bibitemsep}%
+        \setlength{\parsep}{\bibparsep}}}
+    {\endlist}
+    {\item}
+     % http://codydunne.blogspot.com/2012/01/suppressing-bibtex-fields-for-specific.html
+     \AtEveryBibitem{% Clean up the bibtex rather than editing it
+     \clearlist{address}
+     \clearfield{booktitle}
+     \clearfield{date}
+     \clearfield{doi}
+     \clearfield{edition}
+     \clearname{editor}
+     \clearfield{eprint}
+     \clearfield{isbn}
+     \clearfield{issn}
+     \clearfield{journal}
+     \clearlist{location}
+     \clearfield{month}
+     %\clearfield{year}
+     \clearfield{pages}
+     \clearlist{publisher}
+     \clearfield{series}
+     \clearfield{urldate}
+     \clearfield{volume}
+    }
+}
+{}
+\makeatother
+%%%%%%%%%%%%%%%%%%%%
 \usepackage{relsize} % \mathlarger{..}
 \usepackage{hyperref}
-%\usepackage{comment}
-%\usepackage{easyReview}
-%\usepackage{changes}
-% What to pick?
-%https://mengxiangxi.info/BLOG/research/2021/09/20/Good-practice-revising-latex.html
+\hypersetup{colorlinks,citecolor={blue},linkcolor=blue,urlcolor=DarkBlue}
+%\usepackage{svg}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\usepackage[useregional]{datetime2}
 \usepackage{soul} % for \st that strikes through
 \usepackage[normalem]{ulem} % \sout
 
@@ -91,6 +174,7 @@
 
 % We should use the following commands as \ocaml{} to prevent chewing
 % extra space
+\newcommand{\Linux}{\textsc{Linux}}
 \newcommand{\ocaml}{\textsc{OCaml}}
 \newcommand{\OCaml}{\ocaml}
 \newcommand{\haskell}{\textsc{Haskell}}
@@ -99,183 +183,65 @@
 \newcommand{\Coq}{\textsc{Coq}}
 \newcommand{\Java}{\textsc{Java}}
 \newcommand{\CXX}{\textsc{C++}}
+\newcommand{\Scheme}{\textsc{Scheme}}
+\newcommand{\Kotlin}{\textsc{kotlin}}
+\newcommand{\CSharp}{\textsc{C\#}}
 
-\author{Косарев Дмитрий}
-\institute{матмех}
 
-\addtobeamertemplate{title page}{}{
-    \begin{center}
-        {\tiny Дата сборки: \DTMtoday}
-    \end{center}
+%https://brandonrozek.com/blog/latex-footnote-no-count/
+\newcommand\blfootnote[1]{
+  \begingroup
+  \renewcommand\thefootnote{}\footnote{#1}
+  \addtocounter{footnote}{-1}
+  \endgroup
 }
 
-%\let\thefootnote\relax\footnotetext{Put your text here}
 \DeclareMathOperator{\arr}{\rightarrow}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{tikz}
-% For every picture that defines or uses external nodes, you'll have to
-% apply the 'remember picture' style. To avoid some typing, we'll apply
-% the style to all pictures.
-\tikzstyle{every picture}+=[remember picture]
-
-% By default all math in TikZ nodes are set in inline mode. Change this to
-% displaystyle so that we don't get small fractions.
-\everymath{\displaystyle}
 \usetikzlibrary{cd}
 \usepackage{tikz-cd}
 \usepackage{caption}
 \usepackage{subcaption}
-\usepackage{amsthm}
 
-%%\DeclareMathOperator{->}{\rightarrow}
 
+
+
+
+\usepackage[useregional]{datetime2}
 % https://tex.stackexchange.com/a/132994/171947
-\usepackage{amsmath}
+\usepackage{amsthm}
+\newtheorem{exercise}[theorem]{Упражнение}
+
 \ifxetexorluatex
 \else
 \patchcmd{\definition}{Definition}{Определение}{}{}
 \fi
 
-\usepackage{amssymb}
-%\usepackage{amsfonts}
 \usepackage{scalerel}
 \DeclareMathOperator*{\myvee}{\scalerel*{\vee}{\sum}}
 \DeclareMathOperator*{\mywedge}{\scalerel*{\wedge}{\sum}}
 
+\usepackage{array}
+\usepackage{makecell}
+%\newcolumntype{MC}[1]{>{\centering\arraybackslash}p{#1}}
 %
 %\usepackage{tabulary}
-%
-%% sudo aptget install ttf-mscorefonts-installer
-%%\setmainfont{Times New Roman}
-%%\setsansfont[Mapping=tex-text]{DejaVu Sans}
-%
-%%\setmonofont[Scale=1.0,
-%%    BoldFont=lmmonolt10-bold.otf,
-%%    ItalicFont=lmmono10-italic.otf,
-%%    BoldItalicFont=lmmonoproplt10-boldoblique.otf
-%%]{lmmono9-regular.otf}
-%
 % https://tex.stackexchange.com/questions/380799/warning-when-adding-package-minted
 \usepackage[autostyle]{csquotes}
-
-% color options
-\definecolor{YellowGreen} {HTML}{B5C28C}
-\definecolor{ForestGreen} {HTML}{009B55}
-\definecolor{MyPurple}{HTML}{7f007f}
-\def\HaskellTypeclassColor\PYG{k+kt}
-\def\HaskellCommentColor\PYG{c+c1}
-
-%\ifxetexorluatex
-%  \usepackage{fontawesome}
-%\else
-%\fi
-
-
-\newif\ifminted
-\newif\iflistings
-
-\listingstrue
-%\mintedtrue
-
-\iflistings
-    \usepackage{listings}
-
-    %\newcommand{\inline}[1]{\lstinline{haskell}{#1}}
-    % TODO: https://tex.stackexchange.com/questions/4198/emphasize-word-beginning-with-uppercase-letters-in-code-with-lstlisting-package
-    \definecolor{eclipseGreen}{RGB}{63,127,95}
-
-    % https://tex.stackexchange.com/a/4199
-    \makeatletter
-    \newcommand*\ocamlidstyle{%
-            \expandafter\id@style\the\lst@token\relax
-    }
-    \def\id@style#1#2\relax{%
-            \ifcat#1\relax\else
-                    \ifnum`#1=\uccode`#1%
-                             \ttfamily\bfseries\color{MyPurple}
-                    \else
-                                                \ttfamily
-                    \fi
-            \fi
-    }
-    \makeatother
-
-
-    \lstdefinelanguage{ocaml}{
-        basicstyle=\ttfamily   % Вот тут надо стиль ставить, а не у идентификаторов
-%        , identifierstyle=\ocamlidstyle  % конфликтует, если идентификаторы стартуют с подчерка
-        %, commentstyle=\HaskellCommentColor\itshape\HaskellCommentColor
-        , sensitive=true
-        %
-        , classoffset=0
-        , keywords={ fun, function, and, let, rec, in, match, with, when
-            , class, type, of, do, as, val
-            , inherit, module, struct, sig
-            , if, then, else
-            , assert, true, false, begin, end
-            , Some, None
-        }
-        , keywordstyle=\ttfamily\bfseries\color{MyPurple} %\underbar
-        , classoffset=1
-        , morekeywords={pure,empty,select,branch,oneOf}
-        , keywordstyle=\color{MyPurple}
-        , classoffset=2
-        , morekeywords={Monad,Applicative,Selective,String
-            ,Either,Left,Right
-            ,Maybe,Some,None
-        }
-        , keywordstyle=\PYG{k+kt}
-        , classoffset=0,
-        %keywordstyle=[2]{\color{orange}},
-        otherkeywords={::},
-        %identifierstyle=\fontfamily{cmtt}\selectfont\ttfamily,
-        %basewidth={0.5em,0.5em},
-        columns=fixed,
-        %fontadjust=true,
-        %literate={->}{{$\to$}}3 {===}{{$\equiv$}}1 {=/=}{{$\not\equiv$}}1 {|>}{{$\triangleright$}}3 {\\/}{{$\vee$}}2 {/\\}{{$\wedge$}}2 {>=}{{$\ge$}}1 {<=}{{$\le$}} 1,
-        , morecomment=[s]{(*}{*)}
-        , commentstyle=\color{eclipseGreen} % style of comments
-        %, literate={\$}{{\textcolor{blue}{\$}}}1
-        %, literate={<\$>}{{\textcolor{RawSienna}{\ <\$>\ } }}1
-        %           {>?>}{{\textcolor{RawSienna}{\ >?>\ } }}1
-    }
-    \lstset{ language=ocaml }
-    \lstnewenvironment{mlisting}[1][]{\lstset{inputencoding=latin1, language=ocaml,#1}%
-    }{%
-    }
-
-    %\def\mlinline[1]{\lstinline[langauge=ocaml]{#1}} % is not possible
-    \ifpdftex
-        \usepackage{etoolbox}
-        \expandafter\patchcmd\csname \string\lstinline\endcsname{%
-            \leavevmode
-            \bgroup
-        }{%
-            \leavevmode
-            \ifmmode\hbox\fi
-            \bgroup
-        }{}{%
-            \typeout{Patching of \string\lstinline\space failed!}%
-        }
-    \fi
+\ifxetexorluatex
+\else
+% https://tex.stackexchange.com/a/377117/171947
+\renewcommand\thempfootnote{\alph{mpfootnote}}
 \fi
 
-\ifminted
-    \usepackage[cache=true]{minted}
-    \usemintedstyle{perldoc}
-    \def\hsinline{\mintinline{haskell}}
-    \def\mlinline{\mintinline[escapeinside=||]{ocaml}}
-
-%\def\hsinline{\mintinline{haskell}}
-%\def\inline{\hsinline}
-\fi
-
+%\usepackage{listings}
+\input{preamble_listings.tex}
 
 \usepackage{tikz} % Мощный пакет для создание рисунков, однако может очень сильно замедлять компиляцию
 \usetikzlibrary{decorations.pathreplacing,calc,shapes,positioning,tikzmark}
 \newcounter{tmkcount}
-\usepackage{tikzsymbols}
 
 \tikzset{
     use tikzmark/.style={
@@ -299,5 +265,15 @@
 \renewcommand{\epsilon}{\varepsilon}
 \renewcommand{\theta}{\vartheta}
 \renewcommand{\kappa}{\varkappa}
-\renewcommand{\rho}{\varrho}
-\renewcommand{\phi}{\varphi}
+\renewcommand{\rho}{\varrho} % remember my teacher and friend Adalberto!
+\renewcommand{\phi}{\varphi} % TODO(Kakadu): sometimes we need to repeat it in the beginning of the slide
+
+
+% For every picture that defines or uses external nodes, you'll have to
+% apply the 'remember picture' style. To avoid some typing, we'll apply
+% the style to all pictures.
+\tikzstyle{every picture}+=[remember picture]
+
+% By default all math in TikZ nodes are set in inline mode. Change this to
+% displaystyle so that we don't get small fractions.
+\everymath{\displaystyle}
