--- a/papers/lambda2023/lambda2025.tex
+++ b/papers/lambda2023/lambda2025.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = ru_RU
-% !TEX TS-program = xelatex
+% !TEX TS-program = pdflatex
 
 \documentclass[aspectratio=169
   , xcolor={svgnames}
@@ -15,7 +15,7 @@
 \bibliography{bibliography.bib}
 
 \usepackage{verbatim}
-\usepackage{amsmath}
+
 \usepackage{mathpartir}
 
 \newcommand{\term}[2]{\textit{#1} (#2)}
@@ -102,9 +102,9 @@
 
 \begin{frame}{Вопросы к экзамену  }
 \begin{enumerate}
-	\item \textbf{Определение языка лямбда выражений.} (В вольной формулировке, как минимум из трех пунктов). Редекс, стратегия, подстановка, \textbf{каррирование}, область действия квантора, связанные/свободные вхождения переменных. Формулировка тезиса Чёрча-Тьюринга.
-	\item Определение и интуиция за нумералами Чёрча. Определение арифметических операций. \textit{Трассировка сложения и умножения 2 на 2 на листочке.}
-	\item Ветвления с помощью λ-исчисления. Идея за комбинатором неподвижной точки. Набросок реализации факториала
+	\item \textbf{Определение языка лямбда выражений.} (В вольной формулировке, как минимум из трех пунктов). Редекс, стратегия, подстановка, \textbf{шейнфинкелизация}, область действия квантора, связанные/свободные вхождения переменных. Формулировка тезиса Чёрча-Тьюринга
+	\item Определение и интуиция за нумералами Чёрча. Определение арифметических операций. \textit{Трассировка сложения и умножения 2 на 2 на листочке}
+	\item Ветвления с помощью $\lambda$-исчисления. Идея за комбинатором неподвижной точки. Набросок реализации факториала
 
 \end{enumerate}
 \end{frame}
