--- a/papers/lambda2023/preamble.tex
+++ b/papers/lambda2023/preamble.tex
@@ -211,7 +211,9 @@
 
 \usepackage[useregional]{datetime2}
 % https://tex.stackexchange.com/a/132994/171947
+\usepackage{amsmath}
 \usepackage{amsthm}
+
 \newtheorem{exercise}[theorem]{Упражнение}
 
 \ifxetexorluatex
