--- a/papers/vkr2019/vkr.tex
+++ b/papers/vkr2019/vkr.tex
@@ -1,3 +1,6 @@
+% !TEX TS-program = xelatex
+% !TeX spellcheck = ru_RU
+% !TEX root = vkr.tex
 \input{header.tex}
 
 \begin{document}
@@ -12,7 +15,7 @@
 %   of \textsc{OCaml}, utilising late binding to override the default behaviour of generated transformations. The
 %   support for polymorphic variant types complements the ability to describe composable data types with the
 %   ability to implement composable transformations.
-%   
+%
 %   В данной работе представлен подход для языка программирования \textsc{OCaml}, который позволяет реализовывать расширяемые трансформации для различных видов определений типов. Этот подход
 %   использует объектно-ориентированные возможности \textsc{OCaml},
 %   а именно позднее связывание, чтобы изменять поведение по-умолчанию
